# SimpleCal

./: .gitignore  CMakeLists.txt  main.cpp
include/: basic_cal_widget.h  config.h  config.h.in  mainwindow.h  percent_cal_widget.h  relative_cal_widget.h  settings.h  settings_dialog.h  utils.h
resources/: icon.icns
src/: basic_cal_widget.cc  mainwindow.cc  percent_cal_widget.cc  relative_cal_widget.cc  settings.cc  settings_dialog.cc  utils.cc
src/ui/: basic_cal_widget.ui  mainwindow.ui  percent_cal_widget.ui  relative_cal_widget.ui  settings_dialog.ui
